--- a/CSS/styleMine.css
+++ b/CSS/styleMine.css
@@ -78,9 +78,9 @@ body{
 
 #navigation-bar{
 	box-sizing: content-box;
-	padding-left: 80px;
+	padding-left: 128px;
 	margin: auto;
-	width: 361px;
+	width: 460px;
 	height: 100%;
 
 }
@@ -255,4 +255,101 @@ body{
 	width: var(--webpageWidth);
 
 	/* text-align: center; */
+}
+
+.resume{
+	position: relative;
+	width: 802px;
+	height: auto;
+	margin: auto;
+	margin-top: 30px;
+	font-family: "Segoe UI";
+	border: solid 1.2px black;
+	padding: 50px;
+	box-sizing: content-box;
+	border-radius: 30px;
+	box-shadow: 3px 3px;
+
+
+}
+
+.resume-header{
+	padding-bottom: 10px;
+	border-bottom: solid gray 1px;
+}
+.resume-date{
+	float: right;
+	font-weight: 520;
+}
+
+.resume-subsection h1{
+	display: inline;
+	font-size: 1.2em;
+	font-weight: 600;
+}
+.resume-subsection-body{
+	margin-left: 30px;
+}
+
+.resume-subsection-body-item{
+	padding-bottom: 1em;
+}
+.experience-entry-title{
+	font-style: italic;
+}
+
+
+.resume-subsection-body-item ul{
+
+	list-style-position: inside;
+	margin-left: 2em;
+}
+
+.disc-list ul{
+	list-style: circle;
+	margin-left: 2em;
+	list-style-position: inside;
+}
+
+
+.arrowed-list{
+	list-style: none;
+	padding-left: 1em;
+}
+.arrowed-list li::before{
+	content: "→ "
+}
+
+.indented{
+	padding-left: 2em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.embeddedresume{
+	position: absolute;
+	top: 15em;
+	width: 802px;
+	/* height: 1038px; */
+height: 920px;
+	margin-bottom: 100px;
+}
+
+.iframe{
+	width: 100%;
+	height: 100%;
 }
