--- a/CSS/styleMine.css
+++ b/CSS/styleMine.css
@@ -1,7 +1,9 @@
+
 *{
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+	font-family: "Segoe UI";
 }
 
 a {
@@ -9,178 +11,272 @@ a {
 	color:inherit;
  		}
 
-body{
-}
-
 .webpage{
 	min-width: var(--webpageWidth);
+	height: 100%;
+	min-height: 60em;
+
+}
+
+.webpage-content-box{
 	max-width: var(--webpageWidth);
 	margin: 0	auto 100px auto;
-	height: auto;
+	height: 100%;
 }
+
+
 
 
 :root {
     --cornellRed: rgb(179,27,27) ;
 		--webpageWidth: 960px;
 		--halfwebpageWidth: 480px;
-		--headerHeight: 112px;
+		--headerHeight: 13em;
+		--coolBlue: rgb(0,132,255);
 }
 
-.carnelian{
-	color: rgb(179,27,27);
-}
 
-.container{
-	overflow: hidden;
-}
 
-.flex-container{
-	display: flex;
-	flex-flow: row-wrap;
-}
 
 .header-main{
-	border-bottom: 2px solid #b31b1b;
+	border-bottom: 2px solid gray;
 	height: var(--headerHeight);
-	background-color: #fff;
+	max-width: 60em;
+	background-color: var(--coolBlue);
 	position: relative;
-
-	text-align: left;
 	width: 100%;
-	max-width: 1272px;
+	border-radius: 0px 0px 25px 25px;
+	/* max-width: 1272px; */
 	margin: 0 auto;
 }
 
 #cornellBranding{
-	position: absolute;
-	width: 300px;
-	height: var(--headerHeight);
-	margin: auto;
-	left: 0;
-	top: 0;
+	position: relative;
+	display: flex;
+	width: 21em;
+	padding-top: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 1em;
 }
 
 #cornellBranding a img{
-	float: left;
-	position: relative;
-	top:19px;
-	margin-bottom: auto;
+	width: 100%;
+	height: auto;
 }
-#cornellBranding a:first-child img{
+
+#cornellBranding a:first-child{
 	width: 24%;
+	margin-right: .5em;
 }
-#cornellBranding a:last-child img{
-	border-left: 1px solid #ccc;
-	padding-left: 5px;
-	width: 76%;
+#cornellBranding a:last-child{
+
+	border-left: 2px solid white;
+	padding-left: .5em;
+	width: 85%;
+}
+
+.footer{
+	box-shadow: 2px;
+	position: relative;
+	background-color: var(--coolBlue);
+	bottom: 0%;
+	height: 10em;
+	max-height: 10em;
+	width: 100%;
+	text-align: center;
+	align-content: center;
+	color: white;
+	font-size: 1.5em;
+	max-z
+}
+
+
+.my-logo{
+	font-size: 3em;
+	box-sizing: content-box;
+	position: relative;
+	height: 1em;
+	width: auto;
+	font-weight: 600;
+
+	line-height: 1em;
+	text-align: center;
+	color: white;
+
+	margin: auto;
+	top: 13%;
+
 }
 
 #navigation-bar{
-	box-sizing: content-box;
-	padding-left: 128px;
-	margin: auto;
-	width: 500px;
-	height: 100%;
-
-}
-
-#navigation-bar li{
-	float: left;
-	display: inline-block;
-	margin-right: 12px;
-	margin-left: 12px;
-	height: 100%;
-	width: auto;
-}
-
-#navigation-bar a{
 	position: relative;
-	text-decoration: none;
-	color: var(--cornellRed);
-	font-size: 1.3em;
-	font-family: Calibri, Arial,sans-serif;
-	font-weight: bold;
-	top: 33%;
-	border: 1.5px solid #ccc;
-	border-radius: 25px;
-	padding: 12px 10px 12px 10px;
-	opacity: .85;
+	top: 3em;
+	margin: auto;
+	height: 5em;
+	width: 36em;
+	display: flex;
 }
 
-#navigation-bar a:hover{
-	opacity: 1;
-	background-color: #fbfbfb;
-	border: 2.2px solid #ccc;
+.button{
+	position: relative;
+	background-color: white;
+	width: auto;
+	padding: .5em .7em .5em .7em;
+	font-size: 1.5em;
+	font-weight: 600;
+	margin: auto;
 
+	display: inline-block;
+
+	-webkit-border-radius: 25px;
+
+
+	box-shadow:
+		 0px 1.33px rgba(128,128,128,1),
+		 0px 2.66px rgba(118,118,118,1),
+		 0px 4px rgba(108,108,108,1),
+		 0px 5.33px rgba(98,98,98,1),
+		 0px 6.66px rgba(88,88,88,1),
+		 0px 8px rgba(78,78,78,1),
+		 0px 10px 6px -1px rgba(128,128,128,1);
+
+	transition: .2s ease-in;
 }
+
+.button:active {
+        transform: translate(0, 3px); /* depth of button press */
+}
+
+.button:active {
+		box-shadow:
+    0px .83px rgba(128,128,128,1),
+    0px 1.66px rgba(118,118,118,1),
+    0px 2.5px rgba(108,108,108,1),
+    0px 3.33px rgba(98,98,98,1),
+    0px 4.16px rgba(88,88,88,1),
+		0px 5px rgba(78,78,78,1),
+    0px 6px 6px -1px rgba(128,128,128,.6);
+				        }
+
+.button:hover {
+	transform: translate(0, 1px); /* depth of button press */
+}
+
+.button:hover {
+	box-shadow:
+	0px 1.16px rgba(128,128,128,1),
+	0px 2.33px rgba(118,118,118,1),
+	0px 3.5px rgba(108,108,108,1),
+	0px 4.66px rgba(98,98,98,1),
+	0px 5.83px rgba(88,88,88,1),
+	0px 7px rgba(78,78,78,1),
+	0px 9.5px 6px -1px rgba(128,128,128,1);
+}
+
+
 
 .page-title-container{
-	height: 112px;
 	position: relative;
-	text-align: left;
+	height: 7em;
+	line-height: 4em;
+	text-align: center;
 	width: 100%;
 	max-width: 1272px;
-	margin: 0 auto;
-	font-size: 1.5em;
+	font-size: 2em;
 	font-family: Arial;
 }
 
-.page-title-container h1{
-	text-align: center;
+.title-background-image{
+	position: absolute;
+	top: 0%;
+	z-index: -3;
+	overflow: hidden;
+	height: 22em;
+	width: 90%;
+	left: 5%;
+	border: 2px solid gray;
+	padding-left: auto;
+	padding-right: auto;
+	border-radius: 0px 0px 25px 25px;
+
 }
 
-.title-background-image {
-	min-width: var(--webpageWidth);
-	position: absolute;
-	top: 120px;
-	z-index: -1;
-	opacity: .6;
+.title-background-image img {
+	display: flex;
+	position: relative;
+	z-index: inherit;
+	opacity: .75;
 	width: 100%;
+	height: auto;
+	margin: auto;
 }
 
 .gallery-container{
 	position: relative;
-	box-sizing: content-box;
-
-
-
+	width: var(--webpageWidth);
 	height: auto;
-	background-color: yellow;
+	background-color: black;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
 }
 
-.gallery-tile{
-	display: flex;
-	box-sizing: border-box;
-	padding: 1px;
-	position: relative;
-	overflow: hidden;
-	float:left;
-	width: var(--halfwebpageWidth);
+
+.gallery-tile-portrait{
+	width: 50%;
 	height: 640px;
-	background-color: black;
+	align-content: center;
+	align-items: center;
+	text-align: center;
+	position: relative;
+	display: flex;
+	overflow: hidden;
+}
+
+.gallery-tile-landscape{
+	width: 100%;
+	height: auto;
+	align-content: center;
+	align-items: center;
+	text-align: center;
+	position: relative;
 }
 
 .gallery-tile-image{
-	display: block;
+	position: relative;
 	overflow: hidden;
-	width: var(--halfwebpageWidth);
+	width: 100%;
+	height: auto;
+}
+
+.gallery-tile-portrait img{
+	position: relative;
+	overflow: hidden;
+	width: 100%;
 	height: auto;
 	margin: auto;
 }
 
 .gallery-tile-description{
+	visibility: hidden;
 	font-family: 'PT Sans';
 	position: absolute;
-	width: inherit;
-	height: inherit;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
 	background-color: black;
 	color: white;
 	opacity: .6;
 	text-align: center;
 }
 
-.gallery-tile:hover figcaption{
+.gallery-tile-portrait:hover figcaption{
+	visibility: visible;
+}
+
+.gallery-tile-landscape:hover figcaption{
 	visibility: visible;
 }
 
@@ -204,58 +300,46 @@ body{
 
 
 #social-media-bar{
-	top: 0%;
-	right: 0%;
-	width: 10em;
-	height: 100%;
-	float: right;
+	top: 1.6em;
+	right: 2em;
+	width: auto;
+	height: auto;
+	display: flex;
 	text-decoration: none;
 	list-style-type: none;
 	position: absolute;
+	justify-content: center;
+	align-items: center;
 	/* background-color: lightgray; */
 }
 
-#social-media-bar li{
-	width: 33.3%;
-	height: 100%;
-	float: left;
-	align-items: center;
-
-}
-
 #social-media-bar a{
-	width: 53.3px;
-	height: 53.3px;
+	box-sizing: content-box;
+	width: 3em;
+	height: 3em;
+	margin: .5em;
 	position: relative;
+	justify-content: center;
+	align-items: center;
 }
 
-#social-media-bar img{
-	width: 2.6em;
-	height: 2.6em;
-	margin-right: 15px;
-	margin-top: 33px;
-	border-radius: .5em;
+#social-media-bar a img{
+	box-sizing: content-box;
+
+	width: 3em;
+	height: 3em;
+
+
+	border-radius: 1em;
 	opacity: .4;
 
 }
 
-#social-media-bar img:hover{
-	opacity: 1;
+#social-media-bar a img:hover{
+	opacity: .8;
 }
 
 
-
-.footer-container{
-/*
-	position: relative;
-	height: auto;
-	bottom: 100%; */
-	bottom: 100%;
-	height: 200px;
-	width: var(--webpageWidth);
-
-	/* text-align: center; */
-}
 
 .resume{
 	position: relative;
