--- a/lulalphachapter/CSS/lulStyle.css
+++ b/lulalphachapter/CSS/lulStyle.css
@@ -2,11 +2,12 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	font-family: Arial;
+	font-family: PT Sans, Arial;
 }
 
 :root {
-    --lambdaBrown: #967445;
+		--lambdaBrown: #5f3a1e;
+    --lambdalightBrown: #967445;
     --lambdaGold: #f5b700;
 		--webpageWidth: 960px;
 		--halfwebpageWidth: 480px;
@@ -17,27 +18,122 @@
 .webpage{
   width: 100%;
   position: relative;
-  background-color: gray;
 }
+
+
 .webpage-banner{
-  background-color: gray;
   width: 100%;
-  height: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  border-bottom: solid 2px var(--lambdaGold);
+  height: 14em;
+	position: relative;
 }
+
+.navigation-bar{
+	height: 4.5em;
+	display: flex;
+	position: absolute;
+	width: 100%;
+	bottom: 0%;
+	margin-left: auto;
+	margin-right: auto;
+	/* border-top: 5px solid var(--lambdaGold); */
+	/* border-bottom: solid 5px var(--lambdaGold); */
+	background-color: var(--lambdaBrown);
+}
+
+.navigation-bar-item{
+	/* border-radius: 2em; */
+	border-left: solid 5px white;
+	border-right: solid 5px white;
+	border-radius: 4px;
+	height: 100%;
+
+	text-decoration: none;
+
+	background-color: var(--lambdaGold);
+	color: white;
+
+	padding: .3em 1em .3em 1em;
+	font-size: 2em;
+	font-weight: 600;
+	margin: auto;
+	text-align: center;	
+}
+
 .webpage-content{
-  background-color: gray;
   position: relative;
+	margin-top: 3em;
 }
-.lambda-Logo{
-  position: relative;
-  background-color: white;
-  width: 300px;
-  height: 100px;
+
+.webpage-content p{
+	font-size: 1.2em;
+	line-height: 1.5em;
+	text-indent: 5em;
+	margin-bottom: 2em;
 }
-.lambda-Logo img{
-  width: 100%;
-  height: auto;
+
+.webpage-content ol{
+	list-style-position: inside;
+}
+
+.webpage-content ol li{
+	margin-bottom: .5em;
+}
+
+.lambda-logo-container{
+	width: 600px;
+	height: 160px;
+	margin: 1em auto 0 auto;
+	/* background-color: lightgray; */
+
+
+	position: relative;
+}
+
+.lambda-logo-container a{
+	position: absolute;
+	margin: auto;
+	width: inherit;
+	height: inherit;
+	background-image: url(../assets/logo1.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.lambda-logo-contianer a img{
+	width: ;
+	display: block;
+	left: auto;
+}
+
+
+.webpage-content{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.webpage-banner-image{
+	width: 100%;
+	position: relative;
+	margin-bottom: 2em;
+	background-color: var(--lambdalightBrown);
+}
+
+.webpage-content img{
+	display: block;
+	height: 500px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.webpage-content-centered{
+	margin-left: auto;
+	margin-right: auto;
+	width: var(--webpageWidth);
+	height: 100%;
+}
+
+.webpage-header{
+	display: unset;
+	font-size: 2em;
+	border-bottom: solid 2px var(--lambdaBrown)
 }
