--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,6 +18,7 @@
 
 .page{
 	position: relative;
+	min-height: 99vh;
 }
 
 
@@ -145,40 +146,64 @@ nav ul li a:hover{
 
 .page-content{
 	width: 960px;
-	margin: 10px auto 0 auto;
+	margin: 0px auto 0px auto;
 	position: relative;
-	height: 100%;
-	min-height: inherit;
+	min-height: calc(100vh - 62px);
+	/* min-height: inherit; */
 	/* background-color: lightgray; */
 	/* border-left: 2px solid black; */
 	/* border-right: 2px solid black; */
 	font-family: Arial;
 	align-content: center;
+}
 
+#landing-page-container{
+	display: flex;
+	height: calc(100vh - 62px - 79px - 79px - 100px);
+	padding-bottom: 10%;
+	padding-top: 5%;
+	/* float: left; */
+}
+
+#landing-page-container h1{
+	width: 100%;
+	display: block;
 }
 
 .page-content h1{
 	font-size: 2.7em;
 	text-align: center;
-	margin-top: 30px;
+	padding-top: 30px;
 }
 
 .portrait-container{
-	height: 350px;
-	width: 100%;
-	margin-bottom: 20px;
+	height: 100%;
+	width: 40%;
+	/* background-color: lightgray; */
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
 }
 .circular-portrait{
-	width: 300px;
-	height: 300px;
+	width: 336px;
+	height: 336px;
+	margin: auto auto auto auto;
+	/* padding-bottom: 30px; */
+	/* height: 50%; */
 	overflow: hidden;
 	border-radius: 50%;
 	position: relative;
-	top: 25px;
-	margin: auto;
+	/* padding-top: calc(100vh - 62px - 79px - 79px  * .25); */
+	/* margin: auto; */
 	transition-duration: .4s;
 	border: 3px solid #6160ff;
 }
+
+#dummy-portrait-padding{
+	width: 100%;
+	height: 20%;
+}
+
 
 .circular-portrait img{
 	height: 100%;
@@ -187,16 +212,14 @@ nav ul li a:hover{
 }
 
 .circular-portrait:hover{
-	width: 350px;
-	height: 350px;
-	top: 15px;
+	transform: scale(1.08);
+	/* top: 15px; */
 	border-width: thick;
 }
 
 .aboutme-container{
-	width: 600px;
+	width: 60%;
 	margin: auto;
-	padding-top: 10px;
 	text-align: center;
 }
 
