--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,92 @@ nav ul li:hover{
 	margin-bottom: 1em;
 }
 
+.resume{
+	position: relative;
+	width: 802px;
+	height: auto;
+	margin: auto;
+	margin-top: 30px;
+	font-family: "Segoe UI";
+	border: solid 1.2px black;
+	padding: 50px;
+	box-sizing: content-box;
+	border-radius: 30px;
+	box-shadow: 3px 3px;
+
+
+}
+.resume h1{
+	padding: 0;
+}
+.resume a{
+	color: inherit;
+	text-decoration: none;
+}
+
+.resume-header{
+	padding-bottom: 10px;
+	/* border-bottom: solid gray 1px; */
+	text-align: center;
+	padding-bottom: 20px;
+}
+.resume-date{
+	float: right;
+	font-weight: 520;
+}
+
+#coursework{
+	padding-top: 8px;
+}
+
+.resume-subsection h1{
+	display: inline;
+	font-size: 1.3em;
+	font-weight: 600;
+}
+.resume-subsection-body{
+	margin-left: 30px;
+}
+
+.resume-subsection-body-item{
+	padding-bottom: 1em;
+}
+.experience-entry-title{
+	font-style: italic;
+}
+
+
+.resume-subsection-body-item ul{
+
+}
+
+.disc-list{
+	list-style-position: inside;
+	margin-left: 2em;
+	width: 80%;
+	position: relative;
+}
+
+.disc-list ul li{
+	list-style: circle;
+	margin-left: 1.2em;
+}
+.position-description{
+	font-size: .8em;
+}
+
+
+.arrowed-list{
+	list-style: none;
+	padding-left: 1em;
+}
+.arrowed-list li::before{
+	content: "→ "
+}
+
+.indented{
+	padding-left: 2em;
+}
 
 
 
