--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,8 @@ header{
 .navbar-logo{
 	float: left;
   height: 100%;
-	width: 300px;
-	margin-left: 2em;
+	/* width: 300px; */
+	margin-left: 3em;
 	text-align: center;
 }
 
