--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
-	/* font-family: Arial; */
+	font-family: 'Roboto', Arial;
 	/* list-style: none; */
 }
 
