--- a/css/main.css
+++ b/css/main.css
@@ -237,6 +237,7 @@ nav ul li:hover{
 	font-size: 2.7em;
 	text-align: center;
 	padding-top: 30px;
+	margin-bottom: 30px;
 }
 
 .portrait-container{
