--- a/css/main.css
+++ b/css/main.css
@@ -1,415 +1,532 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
-*{
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
-	font-family: 'Roboto', Arial;
-	/* list-style: none; */
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: 'Roboto', Arial;
+    /* list-style: none; */
 }
 
 :root {
-    --cornellRed: rgb(179,27,27) ;
-		--webpageWidth: 960px;
-		--halfwebpageWidth: 480px;
-		--headerHeight: 13em;
-		--coolBlue: rgb(0,132,255);
+    --cornellRed: rgb(179, 27, 27);
+    --webpageWidth: 960px;
+    --halfwebpageWidth: 480px;
+    --headerHeight: 13em;
+    --coolBlue: rgb(0, 132, 255);
+    --themeColor: #6160ff;
+    --footerHeight: 80px;
+    --footerColor: rgba(97, 96, 255, .2)
 }
 
-.page{
-	position: relative;
-	min-height: 99vh;
+#page {
+    position: relative;
+    min-height: 100vh;
 }
 
-header{
-	min-width: 1220px;
-
+#nav-links-desktop {
+    display: none;
 }
 
-.navbar-container{
-
-	/* background-color: #6160ff; */
-  margin: auto;
-  height: 60px;
-  position: relative;
-  }
-
-.navbar-logo{
-	float: left;
-  height: 100%;
-	/* width: 300px; */
-	margin-left: 3em;
-	text-align: center;
-}
-
-
-.navbar-logo a{
-	font-family: 'Roboto';
-	/* color: #eaeaea; */
-	color: #6160ff;
-	display: block;
-	margin: auto;
-	text-decoration: none;
-	font-size: 1.6em;
-	line-height: 60px;
-	font-weight: bold;
-	transition-duration: .35s;
-}
-
-
-.navbar-logo a:hover{
-	font-size: 1.7em;
-}
-
-header{
-  border-bottom: solid 1.5px #bdbdbd;
-}
-
-nav{
-  /* background-color: lightblue; */
-  float: right;
-  height: 100%;
-  /* min-width: 60%; */
-  position: relative;
-  right: 0%;
-	/* max-width: 868px; */
+@media only screen and (max-width: 600px) {
+    .circular-portrait{
+        width: 80%;
+    }
 
 }
 
-nav ul{
-	/* background-color: yellow; */
-  list-style: none;
-  height: 80%;
-  top: 10%;
-  text-decoration: none;
-  position: relative;
-  display: flex;
-	float: right;
-}
-
-nav ul li{
-	/* background-color: red; */
-
-  height: 100%;
-  top: 0%;
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    #nav-links-mobile {
+        background-color: royalblue;
+    }
+    .circular-portrait {
+        width: 50%;
+    }
 
 }
 
-nav ul li:nth-last-child(1){
-	/* margin-right: 160px;  */
+@media only screen and (min-width: 1024px) {
+    /* For desktop: */
+    #nav-links-mobile {
+        display: none;
+    }
+    #nav-links-desktop {
+        display: inline;
+    }
+    .page-content h1 {
+        font-size: 2.7em;
+        text-align: center;
+        padding-top: 30px;
+
+    }
+    #landing-page-container {
+        display: flex;
+        min-height: calc(100vh - 62px - 79px - 79px - 100px);
+        padding-bottom: 10%;
+        padding-top: 5%;
+        /* float: left; */
+    }
+    .nav-link {
+        position: relative;
+        text-decoration: none;
+        text-decoration: none;
+        height: 100%;
+        top: 0%;
+        margin: auto 30px auto auto;
+        padding: 2px 20px 2px 20px;
+        text-align: center;
+        display: inline-block;
+        font-family: 'Roboto';
+        color: black;
+        line-height: 48px;
+        opacity: .6;
+        font-weight: 300;
+        font-size: 1.5em;
+        text-decoration: none;
+        /* background-color: red; */
+    }
+    .social-media-link {
+        /* background-color: red; */
+        opacity: .6;
+        height: 48px;
+        width: 48px;
+        /* padding-right: 30px; */
+        margin-right: 30px;
+        border-radius: 5px;
+        overflow: hidden;
+    }
+    .social-media-link a img {
+        height: 100%;
+    }
+    .portrait-container {
+        height: 100%;
+        width: 40%;
+        /* background-color: lightgray; */
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .aboutme-container {
+        width: 60%;
+        margin: auto;
+        text-align: center;
+    }
+    .aboutme-container hr {
+        border-top: 3px solid var(--themeColor);
+        margin-top: 25px;
+        margin-bottom: 25px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+    }
+    .circular-portrait {
+        width: 336px;
+        height: 336px;
+        margin: auto auto auto auto;
+        overflow: hidden;
+        border-radius: 50%;
+        position: relative;
+        transition-duration: .4s;
+        border: 3px solid var(--themeColor);
+    }
 }
+
+.social-media-link {
+    opacity: .6;
+    height: 40px;
+    width: 40px;
+    /* padding-right: 30px; */
+    margin-right: 4px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.social-media-link a img {
+    height: 100%;
+}
+
+#landing-page-container {
+    display: flex;
+    /* min-height: calc(100vh - 62px - 79px - 79px - 100px); */
+    /* padding-bottom: 10%; */
+    /* padding-top: 5%; */
+    flex-direction: column;
+}
+
+.navbar-container {
+    /* background-color: #6160ff; */
+    margin: auto;
+    height: 60px;
+    position: relative;
+}
+
+#navbar-logo-desktop {
+    display: none;
+    float: left;
+    height: 100%;
+    /* width: 300px; */
+    margin-left: 3em;
+    text-align: center;
+}
+
+#nav-links-mobile {
+    width: auto;
+    overflow: hidden;
+}
+
+#nav-links-mobile {
+    width: auto;
+    height: 100%;
+    ;
+}
+
+#nav-links-mobile ul {
+    margin: auto;
+}
+
+#nav-links-mobile ul li {
+    font-size: 20px;
+}
+
+#navbar-logo-desktop a {
+    font-family: 'Roboto';
+    /* color: #eaeaea; */
+    color: #6160ff;
+    display: block;
+    margin: auto;
+    text-decoration: none;
+    font-size: 1.6em;
+    line-height: 60px;
+    font-weight: bold;
+    transition-duration: .35s;
+}
+
+#navbar-logo-desktop a:hover {
+    font-size: 1.7em;
+}
+
+header {
+    border-bottom: solid 1.5px #bdbdbd;
+}
+
+#nav-links-desktop {
+    background-color: lightblue;
+    float: right;
+    height: 100%;
+    /* min-width: 60%; */
+    position: relative;
+    right: 0%;
+    /* max-width: 868px; */
+}
+
+nav ul {
+    /* background-color: yellow; */
+    list-style: none;
+    height: 80%;
+    top: 10%;
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    float: right;
+}
+
+nav ul li {
+    /* background-color: red; */
+    height: 100%;
+    top: 0%;
+}
+
+nav ul li:nth-last-child(1) {
+    /* margin-right: 160px;  */
+}
+
 
 /* nav ul li:nth-last-child(1):hover{
-	/* margin-right: 160px; */
+/* margin-right: 160px; */
 
-
-nav ul li a{
-
-	text-decoration: none;
-	color: inherit;
-	/* line-height: 48px; */
-
-
+nav ul li a {
+    text-decoration: none;
+    color: inherit;
+    /* line-height: 48px; */
 }
 
-nav ul li:hover{
-	opacity: 1;
-
-}
-#dropdown-content{
-	/* transition: ease-in; */
-	/* transition-duration: 3s; */
+nav ul li:hover {
+    opacity: 1;
 }
 
-#dropdown-content .nav-bar-collapsable-column{
-	display: none;
-	background-color: white;
-	position: absolute;
-	top: 41px;
-	margin: auto;
-	width: 123px;
-	/* transition: ease-in; */
-	/* transition-duration: 1s; */
+#dropdown-content {
+    /* transition: ease-in; */
+    /* transition-duration: 3s; */
 }
 
-#dropdown-content:hover .nav-bar-collapsable-column{
-	display: flex;
-	flex-direction: column;
-	/* transition-duration: 2s; */
+#dropdown-content .nav-bar-collapsable-column {
+    display: none;
+    background-color: white;
+    position: absolute;
+    top: 41px;
+    margin: auto;
+    width: 123px;
+    /* transition: ease-in; */
+    /* transition-duration: 1s; */
 }
 
-.nav-bar-collapsable-column{
-	border: 2px #6160ff solid;
+#dropdown-content:hover .nav-bar-collapsable-column {
+    display: flex;
+    flex-direction: column;
+    /* transition-duration: 2s; */
+}
 
+.nav-bar-collapsable-column {
+    border: 2px #6160ff solid;
 }
 
 .nav-link:hover {
-	opacity: 1;
+    opacity: 1;
 }
 
-.nav-link{
-  position: relative;
-	text-decoration: none;
-	text-decoration: none;
-  height: 100%;
-  top: 0%;
-	margin: auto 30px auto auto;
-	padding: 2px 20px 2px 20px;
-	text-align: center;
-  display: inline-block;
-	font-family: 'Roboto';
-	color: black;
-	line-height: 48px;
-	opacity: .6;
-	font-weight: 300;
-	font-size: 1.5em;
-	text-decoration: none;
-
-	/* background-color: red; */
+.nav-link {
+    font-family: 'Roboto';
+    color: black;
+    text-decoration: none;
 }
 
-.nav-link:after{
-  content: '';
-  position: absolute;
-  z-index: 0;
-  width: 0%;
-  height: 2px;
-	display: inline;
-  right: 10%;
-	bottom: 5px;
-  /* background: #fff; */
-  opacity: 1;
-  background: #6160ff;
-  transition-property: width;
-  transition-duration: .3s;
-  transition-timing-function: ease-out;
+.nav-link:after {
+    content: '';
+    position: absolute;
+    z-index: 0;
+    display: inline;
+    right: 10%;
+    bottom: 5px;
+    /* background: #fff; */
+    opacity: 1;
+    background: #6160ff;
+    transition-property: width;
+    transition-duration: .3s;
+    transition-timing-function: ease-out;
 }
 
 .nav-link:hover::after,
 .nav-link:focus::after,
-.nav-link:active::after{
-  width: 80%;
-  left: 10%;
+.nav-link:active::after {
+    width: 80%;
+    left: 10%;
 }
 
-.social-media-link{
-	/* background-color: red; */
-	opacity: .6;
-	height: 48px;
-	width: 48px;
-	/* padding-right: 30px; */
-	margin-right: 30px;
-	border-radius: 5px;
-	overflow: hidden;
+.page-content {
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto 0px auto;
+    position: relative;
+    font-family: Arial;
+    align-content: center;
+    padding-bottom: var(--footerHeight);
 }
 
-.social-media-link a img{
-	height: 100%;
+#landing-page-container h1 {
+    width: 100%;
+    display: block;
 }
 
-.page-content{
-	width: 960px;
-	margin: 0px auto 0px auto;
-	position: relative;
-	min-height: calc(100vh - 62px);
-	/* min-height: inherit; */
-	/* background-color: lightgray; */
-	/* border-left: 2px solid black; */
-	/* border-right: 2px solid black; */
-	font-family: Arial;
-	align-content: center;
+.page-content h1 {
+    height: 48px;
+    line-height: 48px;
+    margin: 8px 0px;
+    text-align: center;
+    /* margin: 4px; */
 }
 
-#landing-page-container{
-	display: flex;
-	min-height: calc(100vh - 62px - 79px - 79px - 100px);
-	padding-bottom: 10%;
-	padding-top: 5%;
-	/* float: left; */
+.portrait-container {
+    width: 80%;
+    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    margin: 8px 0px;
+    margin: 8px auto;
 }
 
-#landing-page-container h1{
-	width: 100%;
-	display: block;
+.circular-portrait {
+    height: auto;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 50%;
+    position: relative;
+    transition-duration: .4s;
+    border: 2px solid var(--themeColor);
 }
 
-.page-content h1{
-	font-size: 2.7em;
-	text-align: center;
-	padding-top: 30px;
-	margin-bottom: 30px;
+.circular-portrait::before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+    background-image: url("../images/hyperloopHeadshot.JPG");
+    /* background-color: aquamarine; */
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position-x: 58%;
 }
 
-.portrait-container{
-	height: 100%;
-	width: 40%;
-	/* background-color: lightgray; */
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	margin: auto;
-}
-.circular-portrait{
-	width: 336px;
-	height: 336px;
-	margin: auto auto auto auto;
-	overflow: hidden;
-	border-radius: 50%;
-	position: relative;
-	transition-duration: .4s;
-	border: 3px solid #6160ff;
+#dummy-portrait-padding {
+    width: 100%;
+    height: 20%;
 }
 
-#dummy-portrait-padding{
-	width: 100%;
-	height: 20%;
+.circular-portrait img {
+    /* width: 100%; */
+    height: 100%;
+    right: 29%;
+    position: relative;
 }
 
-
-.circular-portrait img{
-	height: 100%;
-	right: 29%;
-	position: relative;
+.circular-portrait:hover {
+    transform: scale(1.08);
+    /* top: 15px; */
+    border-width: thick;
 }
 
-.circular-portrait:hover{
-	transform: scale(1.08);
-	/* top: 15px; */
-	border-width: thick;
+.aboutme-container {
+    width: 80%;
+    margin: 8px auto;
+    text-align: center;
 }
 
-.aboutme-container{
-	width: 60%;
-	margin: auto;
-	text-align: center;
+.aboutme-container hr {
+    margin: 16px auto;
+    width: 70%;
+    border-top: 1px solid var(--themeColor);
 }
 
-.aboutme-container hr{
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: auto;
-	margin-right: auto;
-	width: 70%;
+.aboutme-container ul {
+    list-style: circle;
+    list-style-position: inside;
+    margin-bottom: 1em;
 }
 
-
-.aboutme-container ul{
-	list-style: circle;
-	list-style-position: inside;
-	margin-bottom: 1em;
+.aboutme-container h3 {
+    height: 24px;
+    line-height: 24px;
+    font-size: 24px;
 }
 
-.aboutme-container h3{
-	margin-bottom: 1em;
+.aboutme-container p {
+    line-height: 1.5em;
+    margin-bottom: 1em;
 }
 
-.aboutme-container p{
-	line-height: 1.5em;
-	margin-bottom: 1em;
+.resume {
+    position: relative;
+    width: 802px;
+    height: auto;
+    margin: auto;
+    margin-top: 30px;
+    font-family: "PT Sans", Arial;
+    border: solid 1.2px black;
+    padding: 50px;
+    box-sizing: content-box;
+    border-radius: 30px;
+    box-shadow: 3px 3px;
 }
 
-.resume{
-	position: relative;
-	width: 802px;
-	height: auto;
-	margin: auto;
-	margin-top: 30px;
-	font-family: "PT Sans", Arial;
-	border: solid 1.2px black;
-	padding: 50px;
-	box-sizing: content-box;
-	border-radius: 30px;
-	box-shadow: 3px 3px;
-
-
-}
-.resume h1{
-	padding: 0;
-}
-.resume a{
-	color: inherit;
-	text-decoration: none;
+.resume h1 {
+    padding: 0;
 }
 
-.resume-header{
-	padding-bottom: 10px;
-	/* border-bottom: solid gray 1px; */
-	text-align: center;
-	padding-bottom: 20px;
-}
-.resume-date{
-	float: right;
-	font-weight: 520;
+.resume a {
+    color: inherit;
+    text-decoration: none;
 }
 
-#coursework{
-	padding-top: 8px;
+.resume-header {
+    padding-bottom: 10px;
+    /* border-bottom: solid gray 1px; */
+    text-align: center;
+    padding-bottom: 20px;
 }
 
-.resume-subsection h1{
-	display: inline;
-	font-size: 1.3em;
-	font-weight: 600;
-}
-.resume-subsection-body{
-	margin-left: 30px;
+.resume-date {
+    float: right;
+    font-weight: 520;
 }
 
-.resume-subsection-body-item{
-	padding-bottom: 1em;
-}
-.experience-entry-title{
-	font-style: italic;
+#coursework {
+    padding-top: 8px;
 }
 
-
-.resume-subsection-body-item ul{
-
+.resume-subsection h1 {
+    display: inline;
+    font-size: 1.3em;
+    font-weight: 600;
 }
 
-.disc-list{
-	list-style-position: inside;
-	margin-left: 2em;
-	width: 80%;
-	position: relative;
+.resume-subsection-body {
+    margin-left: 30px;
 }
 
-.disc-list ul li{
-	list-style: circle;
-	margin-left: 1.2em;
-}
-.position-description{
-	font-size: .8em;
+.resume-subsection-body-item {
+    padding-bottom: 1em;
 }
 
-
-.arrowed-list{
-	list-style: none;
-	padding-left: 1em;
-}
-.arrowed-list li::before{
-	content: "→ "
+.experience-entry-title {
+    font-style: italic;
 }
 
-.indented{
-	padding-left: 2em;
+.resume-subsection-body-item ul {}
+
+.disc-list {
+    list-style-position: inside;
+    margin-left: 2em;
+    width: 80%;
+    position: relative;
 }
 
+.disc-list ul li {
+    list-style: circle;
+    margin-left: 1.2em;
+}
 
+.position-description {
+    font-size: .8em;
+}
 
+.arrowed-list {
+    list-style: none;
+    padding-left: 1em;
+}
 
+.arrowed-list li::before {
+    content: "→ "
+}
 
+.indented {
+    padding-left: 2em;
+}
 
+#page-footer-navigator{
+    border-top: 2px solid var(--themeColor);
+    background-color: var(--footerColor);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: var(--footerHeight);
 
+}
+#page-footer-navigator ul{
+    top: calc(var(--footerHeight) * .2);
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+    align-items: center;
+    align-content: center;
+}
 
+#page-footer-navigator .social-media-link{
+    border-radius: 50%;
+    margin: 0px 8px;
+}
 
-
-
-
-
-
-
-
-
-
-/*  */
+#nav-links-mobile ul li a img{
+    height: 40px;
+    margin-right: 16px;
+}
