--- a/css/investments.css
+++ b/css/investments.css
@@ -1,3 +1,7 @@
+:root{
+--searchBarHeight:42px;
+}
+
 #client-name-title{
     width: 100%;
     text-align: center;
@@ -35,4 +39,93 @@
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+#stock-search-bar{
+    height: 100%;
+    width: calc(100% - 1.3 * var(--searchBarHeight));
+    line-height: var(--searchBarHeight);
+    vertical-align: 0%;
+    font-size: calc(var(--searchBarHeight) * .38);
+    outline: none;
+    border: none;
+}
+
+.stock-search-bar-container{
+    height: var(--searchBarHeight);
+    width: 100%;
+    border: 1px solid lightgray;
+    display: flex;
+}
+#stock-search-bar-container-no-results{
+    border-radius: 10px;
+}
+#stock-search-bar-container-with-results{
+    border-radius: 10px 10px 0 0;
+}
+#search-icon-container {
+    background: none;
+    height: var(--searchBarHeight);
+    width: var(--searchBarHeight);
+    display: flex;
+    fill: darkgray;
+    border: none;
+}
+
+.stock-search-bar-container:hover svg{
+    fill: var(--themeColor);
+    color: var(--themeColor);
+}
+.stock-search-bar-container:focus-within svg{
+    fill: var(--themeColor);
+    /* color: var(--themeColor) */
+}
+#search-icon-container svg{
+    margin: auto;
+    transition: 1s ease-in-out;
+}
+
+#stock-search-container{
+    width: 70%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.search-results-container{
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-radius: 0 0 10px 10px;
+    background-color: whitesmoke;
+    width: 100%;
+    position: absolute;
+    top: var(--searchBarHeight);
+}
+
+.search-result{
+    width: calc(100% - 2 * var(--searchBarHeight));
+    margin: calc(.1 * var(--searchBarHeight)) var(--searchBarHeight);
+    display: flex;
+    flex-direction: row;
+}
+
+.search-result .search-result-symbol{
+    transition: .3s ease-in-out;
+    width: 15%;
+    color: var(--themeColor);
+    /* opacity: .4; */
+}
+.search-result:hover .search-result-symbol{
+    /* opacity: 1; */
+}
+
+.search-result .search-result-company-name{
+
+}
+
+#search-results-container-empty{
+    border: none;
+    height: 0px;
 }
